--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
+    "sass": "^1.32.8",
     "sass-loader": "^8.0.2",
+    "style-resources-loader": "^1.4.1",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
